--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass --watch sass/main.scss css/style.css --no-source-map",
-    
+    "watch:sass": "sass --watch sass/main.scss css/style.css",
+
     "compile:sass": "sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.concat.css css/font-icon.css css/style.comp.css --no-source-map",
+    "concat:css": "concat -o css/style.concat.css css/font-icon.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "sass css/style.prefix.css css/style.css --style compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
